tests/parser/good/call.hel
// @name call
// @phase parser
// @expect success

noop = () : () { () };

greet = (name: str): str { name };

main = () : IO<()> {
    noop();
    greet("world")
}
