tests/parser/bad/missing_semicolon.hel
// @name missing_semicolon
// @phase parser
// @expect error

main = () : IO<()> {
    a = 1
    b = 2
}
